--- a/交换机/华为交换机.md
+++ b/交换机/华为交换机.md
@@ -473,6 +473,8 @@ Error: The VLAN does not exist.
 
 交换机的trunk默认是vlan1可以通信的，咱们可以不然这个口子通信，加一条命令
 
+vlan1默认是在allow-pass表中的
+
 ```bash
 undo port trunk allow-pass vlan 1
 ```
@@ -483,7 +485,9 @@ undo port trunk allow-pass vlan 1
 
 ![image-20220401234749353](image-20220401234749353.png)
 
+untagged只在转发的时候有效，上面的左图是错的。
 
+vlan1 默认在untagged表中
 
 ## 三层交换机
 
@@ -719,25 +723,29 @@ https://support.huawei.com/enterprise/zh/doc/EDOC1100213146/d8e5345a
 
   根桥概念：STP主要作用之一就是在整个交换机网络中计算出一颗无环的树（STP树），根桥就是一个STP交换网络中的树根，STP开始工作后，会在交换机网络中选举出一个根桥，根桥是生产树进行拓扑计算的重要“参考点”，是STP计算得出的无环拓扑的树根
 
-  1. 每个交换机只要运行了STP（Spanning Tree Protocol），它就会有一个桥ID（优先级+交换机MAC），桥ID最小的交换机为根桥
+- ​	每个交换机只要运行了STP（Spanning Tree Protocol），它就会有一个桥ID（优先级+交换机MAC），桥ID最小的交换机为根桥
 
     备注：网桥（Bridge），或者桥也就是交换机。每个交换机的标识就是交换机的桥ID。如上图 4096.4c1f-aabc-102c,前面的4096是它的优先级（这个优先级必须是4096的倍数，可以是0倍，例如0、4096、8192, 4096 * n），后面是它的MAC地址
 
-  2. 当所有交换机的优先级一样的时候，MAC地址最小的为根桥，还可以通过认为指定优先级的方式指定根桥
+- ​	当所有交换机的优先级一样的时候，MAC地址最小的为根桥，还可以通过认为指定优先级的方式指定根桥
 
-  3. https://www.bilibili.com/video/BV1ZY4y1W7ip?p=23&spm_id_from=pageDriver&vd_source=908f99a5244c42140790061d37500028
+​	https://www.bilibili.com/video/BV1ZY4y1W7ip?p=23&spm_id_from=pageDriver&vd_source=908f99a5244c42140790061d37500028
 
-  4. 通过`dis stp查看`,交换机默认优先级是32768，同时通过这个命令我们也可以查看到我们交换机的MAC地址
+- 通过`dis stp查看`,交换机默认优先级是32768，同时通过这个命令我们也可以查看到我们交换机的MAC地址
 
   	![image-20220803012538254](image-20220803012538254.png)
 
-2. 选出根端口
+2.选出根端口
 
-  1. 根桥上面是不选根端口的，根端口只能是在每个非根桥上，选出一个根端口
+- 根桥上面是不选根端口的，根端口只能是在每个非根桥上，选出一个根端口
+- 收到BPDU最优的端口就是根端口
 
-3. 选出指定端口
+3.选出指定端口
 
-4. 阻塞其他端口
+- 一个接口，发的BPDU，比收到的BPDU更优，那它就是指定端口DP
+- 根桥上面的端口一定是 指定端口DP（因为一定比对面发过来的BPDU优）
+
+4.阻塞其他端口
 
 
 
@@ -797,13 +805,173 @@ Aggregated Link 2 Port: 链路聚合
 	- TCN BPDU（Topology Change Notification BPDU）：哪台交换机发现拓扑有变化了，如果某个非根交换机发现某条线路之前是连接的，后来中断了，这个交换机发现了拓扑变化，他就发送一个拓扑改变通知BPDU，发往根桥
 - 配置BPDU是STP进行拓扑计算的关键，TCN BPDU 只在网络拓扑发生变更时才会被触发
 
-配置BPDU的报文格式
+**配置BPDU的报文格式**
 
 ![image-20220803021432504](image-20220803021432504.png)
 
 
 
 
+
+#### 6、配置BPDU的比较原则
+
+对于STP而言，最重要的工作就是在交换网络中计算出一个无环拓扑。在拓扑计算过程中，一个非常重要的内容就是配置BPDU的比较。在配置BPDU中，有四个字段非常关键，他们就是“根桥ID”、“根路径开销”、“网桥ID”、“接口ID”，这四个字段便是交换机进行配置BPDU的比较的关键内容。
+
+STP按照如下顺序选择最优的配置BPDU：
+
+1. 最小的根桥ID（优先级+MAC地址）
+2. 最小的RPC
+	1. 选根端口RP时：一个交换机有多个接口，他们都会收到来自根桥的BPDU，谁的RPC最小，谁就是根端口。
+	2. ![image-20220805010344733](image-20220805010344733.png)
+	3. 选指定端口DP时：一个接口发送的BPDU，比收到BPDU比收到BPDU更优，就是指定端口
+3. 最小发送网桥ID
+	1. 当根桥ID一样，根路径开销一样，就比较发送BPDU的网桥ID，小的交换机上的端口就是DP
+4. 最小的接口ID
+
+在这四个原则中（每条原则都对应配置BPDU中的相应字段），第一条原则主要是用于网络中选举根桥，后面的原则主要是用于选举根桥接口及指定接口
+
+选根端口的时候 要根据这四个原则逐条比较选出，选择指定端口DP的时候也要根据这四个原则逐条比较选出
+
+RP：根端口
+
+DP：指定端口，表示这个端口能正常转发数据
+
+
+
+配置BPDU转发过程![image-20220805014146020](image-20220805014146020.png)
+
+#### 7、STP接口状态
+
+![image-20220805020051804](image-20220805020051804.png)
+
+#### 8、STP的基本配置命令
+
+![image-20220805020148070](image-20220805020148070.png)
+
+![image-20220805020323571](image-20220805020323571.png)
+
+![image-20220805020525622](image-20220805020525622.png)
+
+![image-20220805020714432](image-20220805020714432.png)
+
+## 九、OSPF（open shortest path firs）开放式最短路径路径优先 = 动态路由协议
+
+##### 一、OSPF的特性
+
+1.ospf全称是open shortest path first，开放式最短路径路径优先。ospf通过spf算法达到全网无环路。
+2.ospf报文封装在ip报文内，以单播或组播的形式发送。
+3.ospf通过LSA（link state advertisement）的形式传递路由。LSA是OSPF报文中比较重要的部分。
+任何承载在ip上的的协议都通过报文进行传输的，所以理解好ospf的各个报文至关重要。
+
+##### 二、OSPF的相关概念
+
+1.自治系统：运行同一协议的一组路由器，称为AS。
+2.路由ID（RID）：网络中唯一标识。
+3.邻居：两台路由器运行协议后协商出来的关系
+4.邻接：邻居关系是为了方便进行**路由信息的交换**，邻接是可以进行路由信息交换的过程。
+5.LSA：链路状态通告，包括路由信息、接口信息等。
+
+##### 三、OSPF的四张表
+
+1.邻居表：存放邻居路由器的信息。
+2.拓扑表：也叫链路状态数据库（LSDB），存放LSA （链路状态信息）
+3.全路由表：通过SPF算法，从拓扑表中计算出到达任一节点的所有路径。
+4.路由表：根据全路由表，结合cost计算出的最优路径。
+
+##### 四、OSPF的报文
+
+在第一节中已经介绍，ospf协议是承载在ip网络上的，所以ospf的建立也是通过报文的交互完成的。
+1.hello报文：作用是发现、建立、维持邻居关系。以组播地址224.0.0.5每10s发送一次。40s没有收到邻居发送过来的hello报文，断开邻居关系，并且删除从邻居学习到的链路状态信息。
+2.DD报文：链路状态描述，包含LSA的头部信息。
+3.LSR报文：链路状态请求报文，向邻居请求一条感兴趣的LSA。
+4.LSU报文：链路状态更新报文。作用是对LSR进行回应，包含了具体的LSA信息。
+5.LSACK报文：链路状态确认包。作用是：对收到的LSU进行确认。
+
+##### 五、Router ID
+
+任何想要运行ospf的路由器都必须有唯一的标识，叫做Router ID。Router ID的选取有以下几种方法：
+①手动通过命令配置Router ID
+②如果没有手动配置Router ID，将会从loopback接口中选取ip地址最大的。
+③如果以上均没有，则从up物理接口中选取ip地址最大的。
+
+
+
+##### 六、DR/BDR
+
+当一个网段中有至少两台路由器启用了ospf，那么需要在这些设备中选择一个DR（designated router）为指定路由器，用来给其他所有的路由器传递路由；而BDR（backup designated router）则是DR的备份，当DR失效时，BDR接替DR的功能；既不是DR也不是BDR的叫做DRother。这个概念也很重要，ospf的建立过程都跟这些息息相关。
+所有的DRother都会与DR和BDR形成邻接关系，DRoter之间不会形成邻接关系，所有启用OSPF的路由器都会监听224.0.0.5这个组播地址，只有DR/BDR监听224.0.0.6，后面还会一一讲到。DR/BDR的选取规则如下：
+
+①路由器优先级越大越优先，默认优先级是1，优先级为0代表不参加选举；
+②若优先级相等通过Router ID进行选举，Router ID大的优先。
+
+##### 七、OSPF建立过程
+
+ospf的建立过程分为七个状态（广播网络）：
+
+1.down：接口上没有收到任何ospf报文。
+2.init（初始化）：接口上收到了OSPFhello报文，但在收到的报文中的邻居列表没有看到自己的信息。
+3.two-way：接口上收到了OSPFhello报文，在收到的报文中的邻居列表看到了自己的信息，并开始选取DR/BDR。
+4.ex-start（预启动状态）：发送空的DBD报文，目的是选举主从，主导报文的交互。
+5.exchange：通过LSR报文和LSU报文交互LSA。
+6.loading：回复LSAck，运行算法将LSA载入LSDB。
+7.full：进入完全邻接状态，将最优的路由载入到路由表，双发LSA同步完成。
+
+
+
+##### 八、华为交换机实现OSPF
+
+https://www.bilibili.com/video/BV1Kt4y1Q7MJ?p=20&vd_source=908f99a5244c42140790061d37500028
+
+华为三层交换机OSPF单区域配置
+
+loopback 接口的地址通常指定为32 位掩码。一般八loopback作为ospf的route-id
+
+##### 华为设备为什么要设置loopback接口IP地址
+
+![image-20220822003029837](image-20220822003029837.png)
+
+```
+# 配置ospf
+[Huawei]ospf 1 router-id 1.1.1.1
+	# 1 表示进程号
+	# 1.1.1.1 它不是IP地址啊， 只是和IP地址很像
+	
+
+# 配置区域
+[Huawei-ospf-1]area 0 (配置属于区域0)
+	# 通过 ospf 1进程号进入OSPF里面
+
+# 配置路由规则
+[Huawei-ospf-1-area-0.0.0.0]network 192.168.1.0 0.0.0.255
+	# 通过 area 0进入区域里面
+	
+[Huawei]display ospf peer 
+	# 通过 上面的命令可以查看我们的邻居
+	 OSPF Process 1 with Router ID 1.1.1.1
+		 Neighbors 
+
+ Area 0.0.0.0 interface 192.168.20.1(Vlanif20)'s neighbors
+ Router ID: 2.2.2.2          Address: 192.168.20.2    
+   State: Full  Mode:Nbr is  Master  Priority: 1
+   DR: 192.168.20.1  BDR: 192.168.20.2  MTU: 0    
+   Dead timer due in 34  sec 
+   Retrans timer interval: 5 
+   Neighbor is up for 00:24:52     
+   Authentication Sequence: [ 0 ] 
+
+
+display ip routing-table protocol ospf
+Destination/Mask    Proto   Pre  Cost      Flags NextHop         Interface
+
+    192.168.1.0/24  OSPF    10   3           D   192.168.30.1    Vlanif30	# 吓一跳是 192.168.30.1 出jie'k
+   192.168.20.0/24  OSPF    10   2           D   192.168.30.1    Vlanif30
+```
+
+![image-20220822003017819](image-20220822003017819.png)
+
+
+
+最后会发现，ttl=125 ，证明它经过了3跳路由
 
 ## 十、聚合链路
 
@@ -819,7 +987,37 @@ https://www.bilibili.com/video/BV1ZY4y1W7ip?p=25&vd_source=908f99a5244c421407900
 
 
 
+
+
+#### 1、链路聚合概念
+
+
+
 ![image-20220721032306463](image-20220721032306463.png)
+
+
+
+
+
+**活动和非活动的理解**
+
+设备链路聚合使用成员上限的，比如华为的是8根，当我们超过8根以后，多出来的就只能设置成非活动接口
+
+**聚合模式理解**
+
+我们可以手动的进行捆绑，也可以通过LACP自动的进行捆绑
+
+
+
+
+
+
+
+
+
+
+
+
 
 ![image-20220721032438469](image-20220721032438469.png)
 
@@ -829,9 +1027,28 @@ https://www.bilibili.com/video/BV1ZY4y1W7ip?p=25&vd_source=908f99a5244c421407900
 
 ![image-20220721032613094](image-20220721032613094.png)
 
+通过`display ip interface brief `可以查看交换机配置所有IP
+
+![image-20220805025056589](image-20220805025056589.png)
+
+
+
+#### 2、手动聚合的缺陷（为什么要使用LACP自动聚合）
+
 
 
 ![image-20220721033451553](image-20220721033451553.png)
+
+![image-20220805023029424](image-20220805023029424.png)
+
+
+
+- 为了使链路聚合接口正常工作，必须保证本端链路聚合接口中所有成员接口的对端接口
+	- 同属于一个设备
+	- 加入同一个链路聚合接口
+- 手工模式下，设备间没有报文交互，因此只能通过管理员人工确认
+
+
 
 
 
@@ -851,3 +1068,4 @@ https://www.bilibili.com/video/BV1ZY4y1W7ip?p=25&vd_source=908f99a5244c421407900
 
 ![image-20220721034524513](image-20220721034524513.png)
 
+   
