--- a/交换机/华为交换机.md
+++ b/交换机/华为交换机.md
@@ -658,6 +658,10 @@ https://www.bilibili.com/video/BV1ZY4y1W7ip?p=23&vd_source=908f99a5244c421407900
 
 STP协议是用来防环的
 
+https://support.huawei.com/enterprise/zh/doc/EDOC1100213146/d8e5345a
+
+https://www.bilibili.com/video/BV1ZY4y1W7ip?p=23&spm_id_from=pageDriver&vd_source=908f99a5244c42140790061d37500028
+
 #### 1、二层交换机网络的冗余性与环路
 
 我们在网络设计的时候，为了网络可靠性更高。会设计多条线路冗余，但是这样就会引入环路
@@ -873,8 +877,14 @@ DP：指定端口，表示这个端口能正常转发数据
 
 ##### 三、OSPF的四张表
 
+OSPF的工作过程分为3个大步骤，分别是形成邻居关系--形成邻接关系--计算路由
+
+OSPF建立邻居关系（这个台路由器可以发现和它直连的这台路由器）-- 生成邻居表，然后收集LAS（链路状态信息）--生成LSDB表，收集完成以后，就形成了邻接关系
+
+用收集到的LAS作为数据源，计算路由 --- 形成全路由表，根据全路由表，计算最优路径，生成路由表。
+
 1.邻居表：存放邻居路由器的信息。
-2.拓扑表：也叫链路状态数据库（LSDB），存放LSA （链路状态信息）
+2.拓扑表：**也叫链路状态数据库（LSDB），存放LSA （链路状态信息）**
 3.全路由表：通过SPF算法，从拓扑表中计算出到达任一节点的所有路径。
 4.路由表：根据全路由表，结合cost计算出的最优路径。
 
@@ -882,21 +892,36 @@ DP：指定端口，表示这个端口能正常转发数据
 
 在第一节中已经介绍，ospf协议是承载在ip网络上的，所以ospf的建立也是通过报文的交互完成的。
 1.hello报文：作用是发现、建立、维持邻居关系。以组播地址224.0.0.5每10s发送一次。40s没有收到邻居发送过来的hello报文，断开邻居关系，并且删除从邻居学习到的链路状态信息。
-2.DD报文：链路状态描述，包含LSA的头部信息。
-3.LSR报文：链路状态请求报文，向邻居请求一条感兴趣的LSA。
-4.LSU报文：链路状态更新报文。作用是对LSR进行回应，包含了具体的LSA信息。
-5.LSACK报文：链路状态确认包。作用是：对收到的LSU进行确认。
+2.DD报文（Database Description）：链路状态描述，包含LSA的头部信息，描述本地LSDB（Link status data base 链路状态数据库，所有LSA都在这数据里面）的摘要信息，用于两台设备进行数据库同步
+3.LSR（Link State Request）报文：链路状态请求报文，向邻居请求一条感兴趣的LSA。
+4.LSU（Link State Update）报文：链路状态更新报文。作用是对LSR进行回应，包含了具体的LSA信息。
+5.LSACK（Link State ACK）报文：链路状态确认包。作用是：对收到的LSU进行确认。
 
 ##### 五、Router ID
 
 任何想要运行ospf的路由器都必须有唯一的标识，叫做Router ID。Router ID的选取有以下几种方法：
-①手动通过命令配置Router ID
-②如果没有手动配置Router ID，将会从loopback接口中选取ip地址最大的。
-③如果以上均没有，则从up物理接口中选取ip地址最大的。
+**①手动通过命令配置Router ID**
+**②如果没有手动配置Router ID，将会从loopback接口中选取ip地址最大的。**
+**③如果以上均没有，则从up物理接口中选取ip地址最大的。**
+
+```bash
+# 配置loolback
+[~HUAWEI]int lo	
+[~HUAWEI]int LoopBack ?
+  <0-1023>  LoopBack interface number
+
+[~HUAWEI]int LoopBack 0
+[*HUAWEI-LoopBack0]ip address 3.3.3.3 24
+[*HUAWEI-LoopBack0]commit
+```
+
+##### 六、OSPF Area
+
+运行OSPF的设备，必须要属于一个区域。区域是从逻辑上将设备划分为不同的组，每个组用区域号（Area ID）来标识
 
 
 
-##### 六、DR/BDR
+##### 七、DR/BDR
 
 当一个网段中有至少两台路由器启用了ospf，那么需要在这些设备中选择一个DR（designated router）为指定路由器，用来给其他所有的路由器传递路由；而BDR（backup designated router）则是DR的备份，当DR失效时，BDR接替DR的功能；既不是DR也不是BDR的叫做DRother。这个概念也很重要，ospf的建立过程都跟这些息息相关。
 所有的DRother都会与DR和BDR形成邻接关系，DRoter之间不会形成邻接关系，所有启用OSPF的路由器都会监听224.0.0.5这个组播地址，只有DR/BDR监听224.0.0.6，后面还会一一讲到。DR/BDR的选取规则如下：
@@ -904,7 +929,7 @@ DP：指定端口，表示这个端口能正常转发数据
 ①路由器优先级越大越优先，默认优先级是1，优先级为0代表不参加选举；
 ②若优先级相等通过Router ID进行选举，Router ID大的优先。
 
-##### 七、OSPF建立过程
+##### 八、OSPF建立过程
 
 ospf的建立过程分为七个状态（广播网络）：
 
@@ -916,9 +941,105 @@ ospf的建立过程分为七个状态（广播网络）：
 6.loading：回复LSAck，运行算法将LSA载入LSDB。
 7.full：进入完全邻接状态，将最优的路由载入到路由表，双发LSA同步完成。
 
+![image-20220828235117725](image-20220828235117725.png)
+
+![image-20220828235154156](image-20220828235154156.png)
+
+##### 九、华为路由器实现OSPF
+
+![image-20220828232124522](image-20220828232124522.png)
+
+备注：上面目前只配置了ip地址未配置OSPF
+
+**配置步骤**
+
+步骤1：
+
+```bash
+# 给AR4开启OSPF，指定进程号为1（配置完成自动进入OSPF1视图） 
+[Huawei]ospf 1
+[Huawei-ospf-1]
+# 备注： 我这里没有指定route ID ， 它会自动选取。这里
+```
+
+步骤2：
+
+```bash
+# 将AR4路由器，划分到区域0（配置完成自动进入到区域视图0）
+[Huawei-ospf-1]area 0
+[Huawei-ospf-1-area-0.0.0.0]
+```
+
+步骤3：
+
+```bash
+# 宣告（我十一个路由器，我从哪些接口去发送Hello包--hello包是用来建立邻居的）
+# 一般宣告的技巧 --  就是使用这个路由器的直连网段，如果有两个网段，就宣告两次，依次类推
+# 注意： 宣告的掩码需要采用反掩码
+[Huawei-ospf-1-area-0.0.0.0]network 192.168.1.0 0.0.0.255
+[Huawei-ospf-1-area-0.0.0.0]network 192.168.2.0 0.0.0.255
+```
+
+采用相同配置方法配置AR5的配置
+
+**查看邻居**
+
+```bash
+[~sw1]display ospf 1 peer brief 
+OSPF Process 1 with Router ID 1.1.1.1
+                   Peer Statistic Information
+Total number of peer(s): 1       
+ Peer(s) in full state: 1       
+-----------------------------------------------------------------------------
+ Area Id         Interface                  Neighbor id          State       
+ 0.0.0.0         GE1/0/0                    2.2.2.1              Full        
+-----------------------------------------------------------------------------
+[~sw1]
+```
 
 
-##### 八、华为交换机实现OSPF
+
+**查看路由器收到到所有LAS即LSDB**
+
+![image-20220828234532360](image-20220828234532360.png)
+
+```bash
+[AR5]display ospf 1 lsdb 
+
+	 OSPF Process 1 with Router ID 192.168.3.2
+		 Link State Database 
+
+		         Area: 0.0.0.0
+ Type      LinkState ID    AdvRouter          Age  Len   Sequence   Metric
+ Router    192.168.3.2     192.168.3.2        551  48    80000005       1
+ Router    192.168.1.2     192.168.1.2        594  48    80000007       1
+ Network   192.168.2.1     192.168.1.2        594  32    80000002       0
+ 
+ 
+----------------------------------------------------------------------------
+
+
+[AR4]display ospf 1 lsdb
+
+	 OSPF Process 1 with Router ID 192.168.1.2
+		 Link State Database 
+
+		         Area: 0.0.0.0
+ Type      LinkState ID    AdvRouter          Age  Len   Sequence   Metric
+ Router    192.168.3.2     192.168.3.2        578  48    80000005       1
+ Router    192.168.1.2     192.168.1.2        618  48    80000007       1
+ Network   192.168.2.1     192.168.1.2        618  32    80000002       0
+```
+
+
+
+
+
+
+
+
+
+##### 十、华为交换机实现OSPF
 
 https://www.bilibili.com/video/BV1Kt4y1Q7MJ?p=20&vd_source=908f99a5244c42140790061d37500028
 
@@ -972,6 +1093,67 @@ Destination/Mask    Proto   Pre  Cost      Flags NextHop         Interface
 
 
 最后会发现，ttl=125 ，证明它经过了3跳路由
+
+
+
+
+
+##### 十一、OSPF网络类型
+
+申明：一共有4种，P2P（点到点）和 BMA（Broadcast Multiple Access，广播式多路径访问）是最常用的，剩下的两种
+
+![image-20220828235622921](image-20220828235622921.png)
+
+
+
+##### 十二、DR/BDR
+
+当一个网段中有至少两台路由器启用了ospf，那么需要在这些设备中选择一个DR（designated router）为指定路由器，用来给其他所有的路由器传递路由；而BDR（backup designated router）则是DR的备份，当DR失效时，BDR接替DR的功能；既不是DR也不是BDR的叫做DRother。这个概念也很重要，ospf的建立过程都跟这些息息相关。
+所有的DRother都会与DR和BDR形成邻接关系，DRoter之间不会形成邻接关系，所有启用OSPF的路由器都会监听224.0.0.5这个组播地址，只有DR/BDR监听224.0.0.6，后面还会一一讲到。DR/BDR的选取规则如下：
+
+①路由器优先级越大越优先，默认优先级是1，优先级为0代表不参加选举；
+②若优先级相等通过Router ID进行选举，Router ID大的优先。
+
+DR 用在广播型网络（多路访问）
+
+![image-20220828235949591](image-20220828235949591.png)
+
+如下面五台路由器，每一台都需要去其他四台上面去找LSA，如果有30台呢，那就会狠麻烦，当拓扑出现变更，网络种LSA泛洪，可能会造成带宽的浪费和设备资源的损耗/。DR的作用我举个例子描述：如果你们班上有三十个人，你要去收集每个人的电话号码，你需要一个人一个人问，每次收集都需要找30个人都问一遍，如果这个时候我们选出一个班长，它收集每个同学的电话号码， 如果你需要询问别人的号码，直接问班长就行了。
+
+如果班长请假了呢， 所有需要一个副班长（BDR，备份DR）
+
+所以广播型网络，我们需要选择两个DR，一个作为备用
+
+DR的选举
+
+- 首先看优先级
+- 在比较route-id
+
+通过如下命令查看ospf的优先级
+
+```bash
+[AR4]display ospf interface 
+ Area: 0.0.0.0          (MPLS TE not enabled)
+ IP Address      Type         State    Cost    Pri   DR              BDR 
+ 192.168.1.2     Broadcast    DR       1       1     192.168.1.2     0.0.0.0
+ 192.168.2.1     Broadcast    DR       1       1     192.168.2.1     192.168.2.2
+```
+
+
+
+##### 十三、OSPF域与多区域
+
+**单区域**
+
+![image-20220829000700118](image-20220829000700118.png)
+
+
+
+**多区域**
+
+![image-20220829000718521](image-20220829000718521.png)
+
+OSPF只计算自己区域的路由。如果，Area1 想访问 Area 2，就需要边界路由
 
 ## 十、聚合链路
 
@@ -1069,3 +1251,136 @@ https://www.bilibili.com/video/BV1ZY4y1W7ip?p=25&vd_source=908f99a5244c421407900
 ![image-20220721034524513](image-20220721034524513.png)
 
    
+
+## 十一、路由器
+
+**路由表**
+
+![image-20220828163205376](image-20220828163205376.png)
+
+![image-20220828163318014](image-20220828163318014.png)
+
+**路由条目包含以下信息**
+
+- 目的网络：目的网络的网络号
+- 掩码：目的网段的掩码
+- 出接口：数据爆从本路由发出的接口
+- 下一跳：到达目的网段的下一跳的设备地址
+
+其他：
+
+- Pre （Preference）- 路由协议有限级： 表示此路由的路由协议优先级。针对同一个目的地，可能存在不同下一跳、出接口等多条路由，这些不同的路由可能是由不同的路由协议发现的，也可以是手工配置的静态路由。优先级最高（数值最小）者将成为当前最优路由
+
+
+
+**命令**
+
+```bash
+display ip routing-table 						# 查看路由表
+display ip routing-table protocol direct		# 查看直连路由表
+display ip routing-table protocol static		# 查看静态路由表
+ip route 目的网段 子网掩码 下一跳					 # 配置静态路由
+```
+
+
+
+**路由表的产生**
+
+![image-20220828174005849](image-20220828174005849.png)
+
+直连：只要路由器的某一个接口配置了ip地址，，生效自动产生一个相关的路由条目
+
+静态路由：手动配置静态路由`ip route 目的网段 子网掩码 下一跳`
+
+动态路由：路由器运行动态路由协议学习到的路由（场景：如果我有1000条路由，难道要我手动配置？不可能吧） -- 动态路由的学习算法有（ospf 、rip、isis）
+
+
+
+## 十二、GRP隧道技术（VPN）
+
+背景：一家公司有两个分公司（AR1和AR3），如果要想两个公司之间可以互相访问且安全，方法一：拉一条专线（非常昂贵），方法二：采用已有的
+
+隧道技术应用VPN是Internet技术迅速发展的产物，其简单定义是，在公用数据网上建立属于自己的专用数据网。也就是说不在使用长途专线建立专用数据网，而是充分利用完善的公用数据网建立自己的专用网，它的优点是，既可连接到公网所能达到的任何地点，享受其保密性、安全性和可管理性，又降低网络的使用成本。
+
+- 机制简单，无需维持状态，对隧道两端设备的CPU负担小
+- 本身不提供数据加密，如果需要加密，可以与IPSec结合使用
+- 不提供流量控制和QoS
+
+![image-20220829012655823](image-20220829012655823.png)
+
+步骤1：配置AR7 AR6 AR9上面的地址
+
+步骤2：建立通道（tunnel），协议选择gre
+
+```bash
+[AR7]interface Tunnel 0/0/1
+[AR7-Tunnel0/0/1]ip address 172.16.0.1 24	# 配置隧道地址
+[AR7-Tunnel0/0/1]tunnel-protocol ?
+  gre        Generic Routing Encapsulation
+  ipsec      IPSEC Encapsulation
+  ipv4-ipv6  IP over IPv6 encapsulation
+  ipv6-ipv4  IPv6 over IP encapsulation
+  mpls       MPLS Encapsulation
+  none       Null Encapsulation
+[AR7-Tunnel0/0/1]tunnel-protocol gre		# 配置隧道协议为GRE
+[AR7-Tunnel0/0/1]source 2.2.2.1				# 配置源端地址
+[AR7-Tunnel0/0/1]destination 3.3.3.2		# 配置目的地址
+```
+
+步骤3：为了使路由可达，我们采用ospf协议
+
+**给AR7配置OSPF**
+
+```
+[AR7]ospf 1
+[AR7-ospf-1]area 0	
+[AR7-ospf-1-area-0.0.0.0]network 2.2.2.0 0.0.0.255
+[AR7-ospf-1-area-0.0.0.0]dis this
+[V200R003C00]
+#
+ area 0.0.0.0 
+  network 2.2.2.0 0.0.0.255 
+#
+return
+[AR7-ospf-1-area-0.0.0.0]
+```
+
+**给AR6配置OSPF**
+
+```
+[AR6]ospf 1
+[AR6-ospf-1]area 0	
+[AR6-ospf-1-area-0.0.0.0]network 3.3.3.0 0.0.0.255
+[AR6-ospf-1-area-0.0.0.0]network 2.2.2.0 0.0.0.255 
+[AR6-ospf-1-area-0.0.0.0]dis this
+[V200R003C00]
+#
+ area 0.0.0.0 
+  network 2.2.2.0 0.0.0.255 
+  network 3.3.3.0 0.0.0.255 
+#
+return
+```
+
+**给AR9配置OSPF**
+
+```
+[AR9]ospf 1
+[AR9-ospf-1]area 0	
+[AR9-ospf-1-area-0.0.0.0]network 3.3.3.0 0.0.0.255
+[AR9-ospf-1-area-0.0.0.0]dis this
+[V200R003C00]
+#
+ area 0.0.0.0 
+  network 3.3.3.0 0.0.0.255 
+#
+return
+```
+
+**配置静态路由，通过隧道出去**
+
+```
+[AR7]ip route-static 10.0.0.0 24 Tunnel 0/0/1
+[AR9]ip route-static 192.168.10.0 24 Tunnel 0/0/1
+```
+
