--- a/交换机/华为交换机.md
+++ b/交换机/华为交换机.md
@@ -1384,3 +1384,71 @@ return
 [AR9]ip route-static 192.168.10.0 24 Tunnel 0/0/1
 ```
 
+
+
+## 十三、VXLAN
+
+https://www.bilibili.com/video/BV1Sa4y1H7e3/?spm_id_from=pageDriver&vd_source=908f99a5244c42140790061d37500028
+
+https://www.bilibili.com/video/BV1YU4y1Z7XU/?spm_id_from=trigger_reload&vd_source=908f99a5244c42140790061d37500028
+
+NVO3：网络虚拟换
+
+VXLAN本质上是一条隧道，它是可以创建大二层网络的
+
+由于VXLAN是一条隧道，所以它是工作在Overlay层面的
+
+VXLAN报文封装叫，MAC in UDP，这个封装也决定了它为什么可以创建大二层网络
+
+VXLAN 大于有1600W个
+
+VXLAN是可以用到SDN里面的，也就是说VXLAN这个隧道可以由控制来下发
+
+EVPN就是VXLAN的一个控制平面的CD
+
+VXLAN 它有静态VXLAN和动态VXLAN，如果用的动态VXLAN，EVPN就是它的控制平面，现网中用的都是分布式网关的VXLAN，在分布式网关里面EVPN是一个必备的协议
+
+
+
+#### **VXLAN相关的概念**
+
+**VTEP**： VXLAN隧道的一个端点，它其实是一个IP地址（隧道可以理解成一个IP到另外一个IP，本端的IP就是一个VTEP）
+
+**VNI**：就是VXLAN的一个ID（VLAN也有ID ，如果1-4094），VNI一共有1600W个
+
+**BD**：广播域，我们知道一个VLAN就是一个广播域，VXLAN也是一样的，它的广播域用BD来表示，相当于VLAN
+
+**vBDif**：VXLAN逻辑接口，相当于VLANIF一样
+
+**VAP**：接入测的 access point
+
+**NVE**：如果一台设备运行了VXLAN，我们就讲这台设备是一个NVE
+
+![image-20220830001056855](image-20220830001056855.png)
+
+三台物理设备设备，左边是一台接入层交换机TOR，右边也是一台接入层交换机TOR和一个网关。在三台设备上都运行VXLAN ，这三台设备都是一个NVE。每个NVE呢，都有一个VTEP，这个VTEP就是一个本地的IP地址，比如是一个loopback  ip，GW 也有一个 VTEP， NVE3也有一个VTEP。两个IP 就可以生成一个隧道，所以上面有三条隧道。
+
+然后呢，每个设备上面，它可以创建很多个VNI， 就像VLAN一样。然后呢，所有VNI都共享同一个VTEP，然后每一个VNI都有一个自己的广播域，也就是说一个VNI对应一个BD，VNI的number和 BD的number可以不相同哈
+
+在GW网关上，每一个BD是需要创建一个
+
+
+
+
+
+## 十四、M-LAG
+
+https://blog.csdn.net/qq_45945548/article/details/124512961?ops_request_misc=%257B%2522request%255Fid%2522%253A%2522166179293516781667872811%2522%252C%2522scm%2522%253A%252220140713.130102334..%2522%257D&request_id=166179293516781667872811&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduend~default-1-124512961-null-null.142
+
+https://www.bilibili.com/video/BV1cZ4y1A7c9?spm_id_from=333.999.0.0&vd_source=908f99a5244c42140790061d37500028
+
+![image-20220830013951444](image-20220830013951444.png)
+
+**DFS-Group**：在例子中，Spine1和Spine2他们就组成了DFS-Group，什么是DFS-Group呢？可以把它理解成M-LAG的一个控制平面，其中两台设备中，有一个台是主，一台是备。比如上面Spine1是master，Spine2是backup，虽然具备主备关系，但是他们都能转发。唯一的却别是，在故障场景下，他们才有区别，比如有peer link链路断开了，
+
+**peer-link链路**：必须是一个二层链路，并且它必须配置成Eth-Trunk，哪怕你只有一条线，也要组成Eth-Trunk。由于Peer link是用于两台交换机之间，各种表项的同步，所以这条链路非常重要，在现网部署的时候，最好是采用多个接口，并且跨板的接口来做一个聚合
+
+**keepalive链路（双主检测链路）**：三层互通链路，推荐使用MGMT接口。用于m-lag主备设备之间按照1s的周期发送双主检测报文，用于peer-link故障时进行双主检测。keepalive不参与m-lag的任何转发行为。
+
+keepalive接口是一个三层接口，其实三层接口呢，只要你两台交换机之间IP可达就行。比如说我们可以通过管理口，或者是直接拉一条单独的链路，或者直接使用设备里面的逻辑接口，如look back  IP或者VLAN IP，如果这些IP通过上层的路由协议可达，那么它也可以充当一个MAD接口；
+
