--- a/交换机/华为交换机.md
+++ b/交换机/华为交换机.md
@@ -2184,7 +2184,7 @@ From 192.168.10.2: bytes=32 seq=5 ttl=128 time=31 ms
 
 
 
-#### 3、**配置** **VXLAN** 构建集中式网关部署方式的虚拟网络示例（静态方式
+#### 3、 配置 VXLAN 构建集中式网关部署方式的虚拟网络（集中式网关）
 
 企业已经建成比较成熟的园区网络，但是没有专用的数据中心网络，所有的服务器分布在不同的部门，并且不具备集中放置的条件。现在用户希望在已有园区网络上构建一个虚拟网络，需求如下：
 
@@ -2496,21 +2496,442 @@ From 192.168.10.2: bytes=32 seq=5 ttl=128 time=31 ms
 [~VTEP1-Vbdif20]quit
 ```
 
+如果此时，在同一接入
+
+![image-20220916233819906](image-20220916233819906.png)
+
+此时只要在GE 1/0/3中 如下配置，即可实现PC2和 PC4，PC4和PC1 胡同
+
+```
+[~Switch2-GE1/0/3]undo shutdown
+[~Switch2-GE1/0/3]port default vlan 10
+```
+
+此时如果要使PC6和PC1两个不同VLAN 但是跨网段的PC互通，需要如下配置
+
+![image-20220916234113578](image-20220916234113578.png)
+
+**Switch2配置**
+
+放通VLAN使其进入到VTEP3
+
+```
+[*Switch2]vlan 30
+[*Switch2-vlan30]commit
+[~Switch2-vlan30]q
+
+[~Switch2]int GE 1/0/4	
+[~Switch2-GE1/0/4]undo shutdown
+[*Switch2-GE1/0/4]port default vlan 30
+[*Switch2-GE1/0/4]commit
+[~Switch2-GE1/0/4]quit
+
+[~Switch2]interface GE 1/0/1	
+[~Switch2-GE1/0/1]port trunk allow-pass vlan 30
+[~Switch2-GE1/0/1]commit
+[~Switch2-GE1/0/1]dis this
+#
+interface GE1/0/1
+ undo shutdown
+ port link-type trunk
+ undo port trunk allow-pass vlan 1
+ port trunk allow-pass vlan 10 30
+#
+return
+```
+
+
+
+**配置VTEP3**
+
+需要在VTEP3 上面配置流封装机制，识别到VLAN 30 后，将其判定为走VXLAN隧道
+
+```
+[~VTEP3]int GE 1/0/2.1
+[~VTEP3-GE1/0/2.1]encapsulation dot1q vid 30
+[*VTEP3-GE1/0/2.1]commit
+[~VTEP3-GE1/0/2.1]dis this
+#
+interface GE1/0/2.1 mode l2
+ encapsulation dot1q vid 10
+ encapsulation dot1q vid 30
+ bridge-domain 20
+#
+return
+```
+
+或者在起一个子接口
+
+```
+[~VTEP3]int GE 1/0/2.2 mode l2
+[~VTEP3-GE1/0/2.2]encapsulation dot1q vid 30
+[*VTEP3-GE1/0/2.2]bridge-domain 20
+[*VTEP3-GE1/0/2.2]commit
+[~VTEP3-GE1/0/2.2]dis this
+#
+interface GE1/0/2.2 mode l2
+ encapsulation dot1q vid 30
+ bridge-domain 20
+#
+return
+```
+
+如果此项需要PC1和PC8两个相同网段相同VLAN之间互通（不同VLAN、相同网段互通没有实际意义，他都已经划分了不同VLAN 了，就是为了隔离，你为什么还要互通呢，所以没有实际意义）
+
+![image-20220917001125162](image-20220917001125162.png)
+
+**配置思路**
+
+- 创建VTEP2和VTEP3之间的隧道（因为是相同网段，那么他们都要属于同一个VNI，所以需要创建一个新的VLAN 2030）
+- 配置业务接入点
+
+**配置VTEP2**
+
+```
+
+```
 
 
 
 
 
+一个bridge-domain只能绑定一个vni
 
-| 接入交换机是否相同 | VLAN是否相同 | 网段是否相同 |
-| ------------------ | ------------ | ------------ |
-| 相同               | 相同         | 相同         |
-| 相同               | 相同         | 不同         |
-| 相同               | 不同         | 相同         |
-| 相同               | 不同         | 不同         |
-| 不同               | 相同         | 相同         |
-| 不同               | 相同         | 不同         |
-| 不同               | 不同         | 相同         |
-| 不同               | 不同         | 不同 ✔       |
-|                    |              |              |
+一个vni 也只能绑定一个bridge-domain
 
+一个接口只能绑定一个bridge-domain
+
+一个bridbrge-domain却可以属于多个子接口
+
+一个接口可以配置多个dot1q vid
+
+
+
+一个端口只能属于一个广播域
+
+一个广播域可以有多个端口
+
+
+
+#### 4、配置 VXLAN 虚拟网络实现相同网段用户通信（BGP EVPN 方式）
+
+![image-20220917014126314](image-20220917014126314.png)
+
+```
+#分别在VTEP1、VTEP2上配置EVPN实例并绑定BD域
+bridge-domain 4099
+	vxlan vni 4099
+	arp broadcast-suppress enable	# 开启广播抑制
+```
+
+
+
+
+
+## 二十、BGP协议
+
+https://www.bilibili.com/video/BV1Ya411w7Sn/?spm_id_from=333.788&vd_source=908f99a5244c42140790061d37500028
+
+**BGP概述**
+
+- 外部网关协议
+- 使用TCP作为其传输层协议（可靠）
+- 支持CIDR
+- 增量更新
+- 路径矢量路由协议
+- 无环路
+- 路由策略丰富
+- 可防止路由震荡
+- 易于拓展
+
+
+
+
+
+#### 一、BGP工作原理--报文类型
+
+Open报文
+
+- 协商BGP参数（相当于OSPF里面的hello报文）
+
+Update报文
+
+- 交换机路由信息
+
+Keepalive报文
+
+- 保持邻居关系（相当于OSPF里面的hello报文）
+
+Notification报文（通知报文）
+
+- 差错通知
+
+Route-Refresh报文
+
+- 用于在改变路由策略后请求对等体重新发送路由信息
+
+
+
+##### 1.1	BGP--邻居的建立
+
+下图是BGP邻居的状态、及状态变化图
+
+![image-20220919014257060](image-20220919014257060.png)
+
+一开始idle（闲置）状态，BGP是基于TCP的所有一个TCP三次握手的过程。当三次握手完成，发送Open报文，当他把Open报文发送出去以后邻居状态就变成Open Sent，当他收到一个Receive Correct Open（正确的open回报）报文，状态就变成Open Confirm，当再次收到一个正确的Keepalive报文，状态就变成Establieshed状态。上面任何状态建立过程中如果出现错误的化，他会发送一个notification报文。在Connect状态，建立TCP失败，他会转到Active状态，在Active状态下，他会不断的去尝试建立三层握手。如果重试超时，他会变成Connect状态。
+
+
+
+##### 1.2	BGP邻居建立实验
+
+这里有两台路由器，我们规定他的AS 号是100，这里我们采用Loopback来建立IBGP，建议所有通道建立我们都采用Loopback，可以增加可靠性，为什么呢，因为你建立邻居的两台路由器他可能不是直接物理相连的，当你采用绑定物理端口的方式来建立，当端口down掉以后，整个IBGP就不通了。还有一个点就是，BGP是采用TCP的，只要你底层IP是可达的，他就可以建立邻居关系，所有采用loopback可靠性跟高。
+
+![image-20220919023030451](image-20220919023030451.png)
+
+**AR1配置**
+
+```bash
+[AR1]int GigabitEthernet 0/0/0
+[AR1-GigabitEthernet0/0/0]ip address 12.1.1.1 30
+
+[AR1]int LoopBack 0
+[AR1-LoopBack0]ip ad	
+[AR1-LoopBack0]ip address 1.1.1.1 32
+
+# 配置BGP
+[AR1]bgp 100
+[AR1-bgp]peer 2.2.2.2 as-number 100
+[AR1-bgp]dis this
+#
+bgp 100
+ peer 2.2.2.2 as-number 100 
+ #
+ ipv4-family unicast
+  undo synchronization
+  peer 2.2.2.2 enable
+#
+```
+
+peer 2.2.2.2 as-number 100的意思是，我的邻居是2.2.2.2，AS编号是100
+
+**AR2配置**
+
+```bash
+[AR2]int GigabitEthernet 0/0/0
+[AR2-GigabitEthernet0/0/0]ip address 12.1.1.2 30
+
+[AR2]int LoopBack 0
+[AR2-LoopBack0]ip ad	
+[AR2-LoopBack0]ip address 2.2.2.2 32
+
+# 配置BGP
+[AR2]bgp 100	
+[AR2-bgp]peer 1.1.1.1 as-number 100
+[AR2-bgp]dis this
+#
+bgp 100
+ peer 1.1.1.1 as-number 100 
+ #
+ ipv4-family unicast
+  undo synchronization
+  peer 1.1.1.1 enable
+#
+```
+
+
+
+然后我们使用`dis bgp peer`查看邻居建立状态为Idle状态
+
+在VR1上面查看如下
+
+```
+[AR1]display bgp peer
+
+ BGP local router ID : 12.1.1.1
+ Local AS number : 100
+ Total number of peers : 1		  Peers in established state : 0
+
+  Peer            V          AS  MsgRcvd  MsgSent  OutQ  Up/Down       State PrefRcv
+
+  2.2.2.2         4         100      0        0     0    00:04:35        Idle  
+```
+
+这个时候我们在AR1上面ping 2.2.2.2是ping不通的，为什么呢？
+
+因为BGP的建立是通过IP建立的，AR1上面没有到2.2.2.2的路由，同样AR2上没有到1.1.1.1的路由（他们只有直连路由），所以我们需要建立路由（可以使用ospf），采用静态路由的方式
+
+**VR1配置路由**
+
+```
+[AR1]ip route-static 2.2.2.2 32 12.1.1.2
+```
+
+**VR2配置路由**
+
+```
+[AR2]ip route-static 1.1.1.1 32 12.1.1.1
+```
+
+这个时候我们通过`dis bgp peer`查看邻居建立状态变成了Active，为什么是Active不是`Established`状态呢？
+
+那是因为我们配置完BGP以后，他会发送建立BGP邻居的报文，首先建立邻居关系，首先是建立三层握手，他会发送一个SYN报文，以AR1为例，SYN 报文的源IP是12.1.1.1，目的IP是2.2.2.2，为什么源IP是12.1.1.1，那是因为AR1路由器会查询他的IP 路由表，此时的AR1 的IP 路由表如下/
+
+```
+Destination/Mask    Proto   Pre  Cost      Flags NextHop         Interface
+
+        1.1.1.1/32  Direct  0    0           D   127.0.0.1       LoopBack0
+        2.2.2.2/32  Static  60   0          RD   12.1.1.2        GigabitEthernet0/0/0   ✔
+       12.1.1.0/30  Direct  0    0           D   12.1.1.1        GigabitEthernet0/0/0
+       12.1.1.1/32  Direct  0    0           D   127.0.0.1       GigabitEthernet0/0/0
+       12.1.1.3/32  Direct  0    0           D   127.0.0.1       GigabitEthernet0/0/0
+      127.0.0.0/8   Direct  0    0           D   127.0.0.1       InLoopBack0
+      127.0.0.1/32  Direct  0    0           D   127.0.0.1       InLoopBack0
+127.255.255.255/32  Direct  0    0           D   127.0.0.1       InLoopBack0
+255.255.255.255/32  Direct  0    0           D   127.0.0.1       InLoopBack0
+```
+
+他会去查到2.2.2.2的出接口，发现出接口是GigabitEthernet0/0/0，会将用这个出接口IP作为他的源IP，这个时候的SYN报文  源IP为 12.1.1.1  目的IP为2.2.2.2
+
+当AR2拿到这个报文以后，他发现源IP是12.1.1.1，目的IP是自己。是需要自己来处理的。由于AR2上面BGP配置是`peer 1.1.1.1 as-number`,意识是我要和1.1.1.1建立邻居，但是你是12.1.1.1，不是我需要建立邻居的对象，所以他发送RST报文，拒绝建立完成三层握手，所以是Active状态。（你发送一个SYN ，他就给你回一个RST）
+
+![image-20220919025815946](image-20220919025815946.png)
+
+怎么解决呢？
+
+从这个过程中，我们知道，只要把源IP 改成对应的Loopback IP就行，这个技术叫做更新源
+
+**AR1更新源的配置**
+
+```bash
+[AR1-bgp]peer 2.2.2.2 connect-interface LoopBack 0
+# 这条命令可以理解为，我到达我的邻居2.2.2.2 我的源地址不用默认的，我要改成LoopBack 0
+```
+
+**AR2更新源的配置**
+
+```
+[AR2-bgp]peer 1.1.1.1 connect-interface LoopBack 0
+# 这条命令可以理解为，我到达我的邻居1.1.1.1 我的源地址不用默认的，我要改成LoopBack 0
+```
+
+备注：其实只要在一台上面更新源就行了，但是为了健壮性，我们在两台上面进行配置
+
+这是和BGP邻居状态就变成了Established了
+
+A&Q
+
+1. 当状态为Connect状态有哪些原因呢？
+	1. 如果中间有一个防火墙，由于SYN报文的端口为179，如果防火墙没有放通179端口，也将Timeout
+	2. 没有回程路由，导致Timeout
+	3. ... 还有很多
+
+
+
+##### 1.3 BGP路由通告
+
+我在AR1 和AR2 上面再创建一个Loopback 1地址，用来模拟充当用户
+
+![image-20220919031427229](image-20220919031427229.png)
+
+**AR1 配置**
+
+```
+[AR1]interface LoopBack 1
+[AR1-LoopBack1]ip address 100.1.1.1 32
+```
+
+**AR2配置**
+
+```
+[AR2]interface LoopBack 1
+[AR2-LoopBack1]ip address 200.1.1.1 32
+```
+
+虽然我们BGP邻居关系已经建立了，但是我们的路由表里面是没有任何的BGP路由的，下图是AR1的路由表
+
+```bash
+Destination/Mask    Proto   Pre  Cost      Flags NextHop         Interface
+
+        1.1.1.1/32  Direct  0    0           D   127.0.0.1       LoopBack0
+        2.2.2.2/32  Static  60   0          RD   12.1.1.2        GigabitEthernet0/0/0	# RD 对应我们取消了默认出接口作为源IP（更新源）
+       12.1.1.0/30  Direct  0    0           D   12.1.1.1        GigabitEthernet0/0/0
+       12.1.1.1/32  Direct  0    0           D   127.0.0.1       GigabitEthernet0/0/0
+       12.1.1.3/32  Direct  0    0           D   127.0.0.1       GigabitEthernet0/0/0
+      100.1.1.1/32  Direct  0    0           D   127.0.0.1       LoopBack1
+      127.0.0.0/8   Direct  0    0           D   127.0.0.1       InLoopBack0
+      127.0.0.1/32  Direct  0    0           D   127.0.0.1       InLoopBack0
+127.255.255.255/32  Direct  0    0           D   127.0.0.1       InLoopBack0
+255.255.255.255/32  Direct  0    0           D   127.0.0.1       InLoopBack0
+```
+
+这个时候我们用100.1.1.1 去ping  200.1.1.1是ping不通的
+
+```
+[AR1]ping -a 10.1.1.1 200.1.1.1
+Warning: The specified source address is not a local address, the ping command will not check the network connection.
+  PING 200.1.1.1: 56  data bytes, press CTRL_C to break
+    Request time out
+    Request time out
+```
+
+这是因为BGP配置完成以后他是没有任何路由的，不像OSPF，配置i完成以后，我们有新的路由信息，他会自动同步更新。BGP需要手动将路由添加到BGP里面
+
+路由引入到BGP有2种，一种就是import、一种是network引入指定路由（如果`dis ip route-table`中没有这条路由，采用network是会失败的）
+
+**AR1 通过import 引入路由**
+
+```bash
+[AR1-bgp]import-route ?
+  direct  Connected routes												# 引入直连路由
+  isis    Intermediate System to Intermediate System (IS-IS) routes		# 引入isis协议的路由
+  ospf    Open Shortest Path First (OSPF) routes						# 引入ospf发现的路由
+  rip     Routing Information Protocol (RIP) routes
+  static  Static routes													# 引入静态路由
+  unr     User network routes
+[AR1]bgp 100	
+[AR1-bgp]import-route static 
+```
+
+**查看AR1的BGP路由表**
+
+```
+[AR1-bgp]display bgp routing-table 
+
+ BGP Local router ID is 12.1.1.1 
+ Status codes: * - valid, > - best, d - damped,
+               h - history,  i - internal, s - suppressed, S - Stale
+               Origin : i - IGP, e - EGP, ? - incomplete
+ Total Number of Routes: 2
+      Network            NextHop        MED        LocPrf    PrefVal Path/Ogn
+
+ *>   2.2.2.2/32         0.0.0.0         0                     0      ?
+ *>i  200.1.1.1/32       2.2.2.2         0          100        0      i
+```
+
+这里也有两条。200.1.1.1 是我创建一条静态路由。然后采用`import-route static`引入的
+
+**AR2 通过network 引入路由**
+
+```
+[AR2]bgp 100	
+[AR2-bgp]network 200.1.1.1 32
+```
+
+**查看AR2的BGP路由表**
+
+```bash
+[AR2-bgp]display bgp routing-table
+
+ BGP Local router ID is 12.1.1.2 
+ Status codes: * - valid, > - best, d - damped,h - history,  i - internal, s - suppressed, S - Stale
+ Origin : i - IGP, e - EGP, ? - incomplete
+      Network            NextHop        MED        LocPrf    PrefVal Path/Ogn
+
+ *>i  2.2.2.2/32         1.1.1.1         0          100        0      ?
+ *>   200.1.1.1/32       0.0.0.0         0                     0      i
+[AR2-bgp]
+```
+
+我们可以看到这里有2条路由，一条是200.1.1.1，这一条是我们本地的路由（通过network引入），前面的*表示他是一个有效的，>表示他是最优的，，200.1.1.1/32表示目的地址，0.0.0.0表示吓一跳，是他自己始发的，这个Origin表示他的起源属性，i表示通过network引入的，`*`表示通过import 引入
+
+上面的2.2.2.2是我们创建Bgp的时候创建的一条
