--- a/交换机/华为交换机.md
+++ b/交换机/华为交换机.md
@@ -4,6 +4,21 @@
 
 三层的每个接口都需要配置位于不同网段的IP地址，隔离广播域，设计上就是这样的。也就是你一个接口配了192.168.1.1另一个接口肯定不能配置192.168.1.1了，不然不就冲突了，设备收到数据包转发给谁？三层就相当于都是WAN 口， lan 是二层接口，相当同一个网段。
 
+| 等级         | L1   | L2     | L3   |
+| ------------ | ---- | ------ | ---- |
+| 累计使用次数 | 0-10 | 11-100 | >100 |
+| 折扣系数     | 0.9  | 0.8    | 0.7  |
+
+
+
+| 等级     | V1   | V2   | V3   | V4(不打折) |
+| -------- | ---- | ---- | ---- | ---------- |
+| 初始单价 | 500  | 300  | 200  | 1000       |
+
+
+
+
+
 
 
 
@@ -2632,6 +2647,40 @@ bridge-domain 4099
 
 https://www.bilibili.com/video/BV1Ya411w7Sn/?spm_id_from=333.788&vd_source=908f99a5244c42140790061d37500028
 
+**BGP和OSPF的区别**
+
+总结来说就两点：
+
+1、类型不同
+
+OSPF是无类别链路状态路由协议，属于IGP，工作也在一个AS内；
+
+BGP是无类别路径矢量路由协议，属于EGP，工作在AS间
+
+2、作用不同
+
+OSPF是用来发现、计算路由的；
+
+BGP是用来传递、控制路由的
+
+1、OSPF的数据包有五种，分别是Hello包、DBD包、LSR、LSU、LSACK
+
+BGP的数据包四种，分别是Open、Keeplive、Update、Notification
+
+2、OSPF状态机一般有七个，分别是down、init、two-way、exstart、exchange、loading、full
+
+BGP的状态机有六个，分别是Idle、Connect、Active、Opensent、Openconfirm、Establish
+
+3、OSPF选路规则有五个人为控制的只有cost，BGP有十二个，管理员可以灵活地控制
+
+4、OSPF建邻条件很多，有10个；BGP的建邻只需要邻居间可达、路由表中有邻居路由即可
+
+5、两种协议的追求不同，OSPF属于IGP协议，追求的是收敛快、选路佳、占用资源少；BGP属于EGP，追求的是可靠性、可控性强，还有就是以一个AS为一跳，即AS-BY-AS
+
+6、防环机制不同，OSPF的防环机制主要依靠它的算法本身还有区域间水平分割等，BGP的防环机制主要有IBGP水平分割和EBGP水平分割
+
+
+
 **BGP概述**
 
 - 外部网关协议
@@ -2687,6 +2736,19 @@ Route-Refresh报文
 这里有两台路由器，我们规定他的AS 号是100，这里我们采用Loopback来建立IBGP，建议所有通道建立我们都采用Loopback，可以增加可靠性，为什么呢，因为你建立邻居的两台路由器他可能不是直接物理相连的，当你采用绑定物理端口的方式来建立，当端口down掉以后，整个IBGP就不通了。还有一个点就是，BGP是采用TCP的，只要你底层IP是可达的，他就可以建立邻居关系，所有采用loopback可靠性跟高。
 
 ![image-20220919023030451](image-20220919023030451.png)
+
+Loopback 就相当于一个实际的物理口，但是只有直连链路才会到对端的路由
+
+路由器或者三层接口直连的链路要想通讯必须在同一个网段
+
+**建立bgp邻居的配置思路**
+
+- 配置路由器/交换机之间物理链路连通
+- 配置Loopback作为bgp的控制平面地址
+- 配置loopback0 到 loopback0之间的路由
+- 配置bgp并更新源（不更新源的话，无法建立邻居）
+
+整个邻居建立过程中只配置了一次路由（这个路由可以使用ospf或者手动配置静态路由）
 
 **AR1配置**
 
@@ -2758,7 +2820,7 @@ bgp 100
 
 这个时候我们在AR1上面ping 2.2.2.2是ping不通的，为什么呢？
 
-因为BGP的建立是通过IP建立的，AR1上面没有到2.2.2.2的路由，同样AR2上没有到1.1.1.1的路由（他们只有直连路由），所以我们需要建立路由（可以使用ospf），采用静态路由的方式
+因为BGP的建立是通过IP建立的，AR1上面没有到2.2.2.2的路由，同样AR2上没有到1.1.1.1的路由（他们只有直连路由），所以我们需要建立路由（可以使用ospf），也可以采用静态路由的方式
 
 **VR1配置路由**
 
@@ -2804,7 +2866,7 @@ Destination/Mask    Proto   Pre  Cost      Flags NextHop         Interface
 
 ```bash
 [AR1-bgp]peer 2.2.2.2 connect-interface LoopBack 0
-# 这条命令可以理解为，我到达我的邻居2.2.2.2 我的源地址不用默认的，我要改成LoopBack 0
+# 这条命令可以理解为，我到达我的邻居2.2.2.2 我的源地址不用默认的（接口地址），我要改成LoopBack 0
 ```
 
 **AR2更新源的配置**
@@ -2828,6 +2890,13 @@ A&Q
 
 
 ##### 1.3 BGP路由通告
+
+BGP对等体交互路由原则
+
+- 只将BGP的最优路由发布给对等体
+- 从IBGP对等体获得的路由，只发布给EBGP对等体
+- 从EBGP对等体获得的路由，发布给所有EBGP和IBGP对等体
+- 只发送更新的BGP路由
 
 我在AR1 和AR2 上面再创建一个Loopback 1地址，用来模拟充当用户
 
@@ -2932,6 +3001,20 @@ Warning: The specified source address is not a local address, the ping command w
 [AR2-bgp]
 ```
 
-我们可以看到这里有2条路由，一条是200.1.1.1，这一条是我们本地的路由（通过network引入），前面的*表示他是一个有效的，>表示他是最优的，，200.1.1.1/32表示目的地址，0.0.0.0表示吓一跳，是他自己始发的，这个Origin表示他的起源属性，i表示通过network引入的，`*`表示通过import 引入
+我们可以看到这里有2条路由，一条是200.1.1.1，这一条是我们本地的路由（通过network引入），前面的*表示他是一个有效的，>表示他是最优的，，200.1.1.1/32表示目的地址，0.0.0.0表示吓一跳，是他自己始发的，这个Origin表示他的起源属性，i表示通过network引入的，`？`表示通过import 引入
+
+BGP交换机路由其实是很有讲究的，只要在一端bgp里面导入了路由，如果是IBGP，他就会通过给他的邻居，他的邻居回到ip route-table表里面去找相应的关系同步到自己bgp路由里面，两边bgp路由的吓一跳是不一样的，具体根据 ip route-table 来定。
 
 上面的2.2.2.2是我们创建Bgp的时候创建的一条
+
+
+
+### 三、FAQ
+
+##### 1、BGP引入其他协议的路由后（import-route ？），在BGP路由表中下一跳为什么都是0.0.0.0
+
+因为这个路由能够被BGP引入，说明路由表中已经存在此路由表项，不是新增了一条路由，而是在该路由表项的基础上增加了引用计数。
+
+https://baijiahao.baidu.com/s?id=1737120040301590616&wfr=spider&for=pc
+
+![image-20220923023218692](image-20220923023218692.png)
